Try fix layout issue with nav panel

--- a/src/scss/modules/_navigation-panel.scss
+++ b/src/scss/modules/_navigation-panel.scss
@@ -27,13 +27,14 @@
     z-index: 3;
     position: absolute;
     top: 100vh;
-    right: 0;  
+    left: $landing-left-panel;  
     width: $landing-right-panel; 
     border-left: $borderW solid $border-color;
 
     @include bp-s {
         top: 200vh;
         width: 100vw; 
+        left: 0;
         border-left: none;
     }
 }
